--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 serde = {version = "1", features = ["derive"]}
 toml_edit = {version = "0.17", features = ["serde"]}
 once_cell = "1.17"
-tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
+tokio = {version = "1", features = ["rt-multi-thread", "macros", "process"]}
 axum = "0.6"
 tracing = "0.1"
 tracing-subscriber = {version = "0.3", features = ["env-filter"]}
 tower-http = {version = "0.3", features = ["trace"]}
 chrono = {version = "0.4", features = ["serde"]}
+reqwest = {version = "0.11", default-features = false}
+thiserror = "1"
