--- a/conf.toml
+++ b/conf.toml
@@ -1,4 +1,6 @@
 endpoint = "0.0.0.0:3000"
-node_endpoint = "127.0.0.1:42"
-graphana_endpoint = "127.0.0.1:3000"
-reporting_interval = 10.0
+node_endpoint = "http://127.0.0.1:42"
+graphana_endpoint = "http://127.0.0.1:3000"
+data_script = "./mock.py"
+# Seconds between reporting
+reporting_interval = 120.0
