--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,21 +9,31 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+
+      - name: cache restore
+        uses: actions/cache@v3
+        with:
+          path: target/
+          key: ${{ runner.os }}-build
+
       - uses: actions-rs/cargo@v1
         name: Build X86_64
         with:
           command: build
           args: --target=x86_64-unknown-linux-gnu --release
+
       - uses: actions-rs/cargo@v1
         name: Build Armv7
         with:
           command: build
           args: --target armv7-unknown-linux-gnueabihf --release
           use-cross: true
+
       - uses: actions/upload-artifact@v3
         with:
           name: raspberry-daemon-x86_64
           path: target/x86_64-unknown-linux-gnu/release/raspberry-daemon
+      
       - uses: actions/upload-artifact@v3
         with:
           name: raspberry-daemon-armv7
