change name of cache step in gh action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           toolchain: stable
 
-      - name: cache restore
+      - name: cache
         uses: actions/cache@v3
         with:
           path: target/
