Improve data gathering and config parsing
Seperate data gathering into multiple shell-executed commands and switch
to Cow<'a, str> instead of String in config parser.

--- a/conf.toml
+++ b/conf.toml
@@ -1,7 +1,8 @@
 endpoint = "0.0.0.0:3000"
 node_endpoint = "http://127.0.0.1:1420"
 graphana_endpoint = "http://127.0.0.1:3000"
-data_script = "./mock.py"
+temp_command = "/usr/bin/python3 mock-temp.py"
+ppa_command = "/usr/bin/python3 mock-ppa.py"
 # Seconds between reporting
 reporting_interval = 120.0
 raum_id = 6
