make service automagically restart on failure

--- a/root/etc/systemd/system/msh-raspberry-daemon.service
+++ b/root/etc/systemd/system/msh-raspberry-daemon.service
@@ -4,3 +4,4 @@ Description=Daemon für Messgerät Projekt (Aaron <llpvbel7h@mozmail.com>)
 [Service]
 Type=simple
 ExecStart=/usr/local/msh/bin/raspberry-daemon
+Restart=on-failure
