--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = {version = "1", features = ["derive"]}
+serde_with = "2.2"
 toml_edit = {version = "0.17", features = ["serde"]}
 once_cell = "1.17"
 tokio = {version = "1", features = ["rt-multi-thread", "macros", "process"]}
